fail_crate/tests/wrong_type_after_const.rs
use inew::New;

#[derive(New)]
#[new(const = "true")]
struct A;

fn main() {}
